--- a/src/app/components/App.module.css
+++ b/src/app/components/App.module.css
@@ -6,15 +6,15 @@
     z-index: 10;
 }
 
-.sticky hr {
-    margin: 0;
+.sticky .table {
+    margin-top: 1rem;
     padding-bottom: 1rem;
     border: none;
     border-bottom: 1px solid var(--color-bg-secondary);
 }
 
 .notice {
-    margin-top: 1.5rem;
+    margin: 0 0 .75rem;
     padding: .75rem;
-    background-color: var(--color-bg-secondary);
+    border: 1px solid var(--color-bg-secondary);
 }
