--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     height: 44px;
-    margin: 0 -20px 1rem;
+    margin: 0 -20px;
     padding: 0 20px;
     border-bottom: 1px solid var(--color-bg-secondary);
 }
@@ -22,30 +22,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 150px;
+    padding: 0 .75rem;
+    min-width: 150px;
     height: 44px;
     line-height: 1.4;
     font-size: 10px;
     border-right: 1px solid var(--color-bg-secondary);
 }
 
-.section .version {
-    width: 120px;
-    text-align: center;
-    color: var(--color-text);
-    background: var(--color-bg-secondary);
-    text-decoration: none;
-    transition: all .2s ease-out;
-    cursor: pointer;
-}
-
-.section .version:hover {
-    color: var(--color-bg-primary);
-    background: var(--color-text);
-}
-
 .section .router {
-    width: 120px;
+    min-width: 120px;
+    width: calc(100% - 1rem);
+    padding: 0 .5rem;
     text-align: center;
     color: var(--color-text);
     background: var(--color-bg-secondary);
@@ -58,6 +46,42 @@
 .section .router:hover {
     color: var(--color-bg-primary);
     background: var(--color-text);
+}
+
+.section .versions {
+    display: flex;
+    width: 100%;
+    background-color: var(--color-text);
+}
+
+.section .versions a {
+    width: calc(100% - 1rem);
+    padding: 0 .5rem;
+    text-align: center;
+    color: var(--color-text);
+    background: var(--color-bg-secondary);
+    text-decoration: none;
+    transition: all .2s ease-out;
+    cursor: pointer;
+    white-space: nowrap;
+
+}
+
+.section .versions a+a {
+    opacity: .70;
+    background-color: var(--color-bg-primary);
+}
+
+.section .versions a:hover {
+    color: var(--color-bg-primary);
+    background: var(--color-text);
+}
+
+.box {
+    display: block;
+    height: 100%;
+    width: 350px;
+    border-right: 1px solid var(--color-bg-secondary);
 }
 
 .switch {
