--- a/src/app/components/Table.module.css
+++ b/src/app/components/Table.module.css
@@ -22,6 +22,7 @@
     color: var(--color-primary);
     cursor: pointer;
     transition: all .15s ease-out;
+    white-space: nowrap;
 }
 
 .button:hover {
