--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -6,8 +6,8 @@
     --color-text: #fff;
     --color-pre-key: #fff;
     --color-pre-str: #01df74;
-    --color-pre-num: #66ccff;
-    --color-pre-null: #ff00ff;
+    --color-pre-num: #6cf;
+    --color-pre-null: #f0f;
     --color-pre-bool: #ff4d00;
     --color-critical: #ff4d00;
     --color-alert: #ff7300;
@@ -23,8 +23,8 @@
     --color-pre-str: #12b300;
     --color-pre-num: #0060d8;
     --color-pre-null: #960096;
-    --color-pre-bool: #ff0000;
-    --color-critical: #ff0000;
+    --color-pre-bool: #f00;
+    --color-critical: #f00;
     --color-alert: #ff7300;
     --color-warn: #c0a901;
 }
