--- a/src/app/components/Actions.module.css
+++ b/src/app/components/Actions.module.css
@@ -26,11 +26,11 @@
     border-color: var(--color-warn);
 }
 
-.actions .highlight:after {
+.actions .highlight::after {
     background: var(--color-warn);
 }
 
-.actions span+span:before {
+.actions span+span::before {
     content: " | ";
     color: var(--color-text);
     width: 0;
@@ -53,7 +53,7 @@
     opacity: .9;
 }
 
-.actions span:after {
+.actions span::after {
     position: absolute;
     left: 14px;
     bottom: 0;
@@ -67,20 +67,16 @@
     opacity: .7;
 }
 
-.actions span:first-child:after {
+.actions span:first-child::after {
     left: 0;
 }
 
-.actions span:hover:after {
+.actions span:hover::after {
     width: calc(100% - 14px);
 }
 
-.actions span:first-child:hover:after {
+.actions span:first-child:hover::after {
     width: 100%;
-}
-
-.selector ul {
-    position: relative;
 }
 
 .selector ul {
@@ -107,8 +103,10 @@
     margin: 0;
     padding: .25rem .75rem;
     transition: all .2s ease-out;
+    color: var(--color-text);
 }
 
-.actions .selector ul li:hover {
+.actions ul li:hover {
     background-color: var(--color-bg-secondary);
+    color: var(--color-primary);
 }
