--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -44,8 +44,7 @@
 }
 
 .section .router:hover {
-    color: var(--color-bg-primary);
-    background: var(--color-text);
+    opacity: .8;
 }
 
 .section .versions {
@@ -73,8 +72,7 @@
 }
 
 .section .versions a:hover {
-    color: var(--color-bg-primary);
-    background: var(--color-text);
+    opacity: .8;
 }
 
 .box {
@@ -84,7 +82,50 @@
     border-right: 1px solid var(--color-bg-secondary);
 }
 
-.switch {
+.box:last-child {
     flex-grow: 1;
     text-align: right;
+}
+
+.theme {
+    position: relative;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+.theme>span {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    font-size: 1.5rem;
+    border-left: 1px solid var(--color-bg-secondary);
+    color: var(--color-text);
+    cursor: pointer;
+}
+
+.theme>span:after {
+    position: absolute;
+    content: " ";
+    width: 1rem;
+    height: 1rem;
+    background-color: var(--color-bg-secondary);
+    border: 3px solid var(--color-bg-secondary);
+    border-radius: 50%;
+    transition: all .15s ease-in-out;
+}
+
+.theme>span:hover:after {
+    background-color: transparent;
+}
+
+.theme.light>span:after {
+    background-color: transparent;
+}
+
+.theme.light>span:hover:after {
+    background-color: var(--color-bg-secondary);
 }
