--- a/src/app/components/Switch.module.css
+++ b/src/app/components/Switch.module.css
@@ -14,10 +14,7 @@
 .switch .slider {
     position: absolute;
     cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
     background-color: #fff;
     color: var(--color-primary);
     transition: all .25s ease-in-out;
