--- a/src/popup/Popup.module.css
+++ b/src/popup/Popup.module.css
@@ -5,8 +5,8 @@
   position: fixed;
   top: -10px;
   right: 10px;
-  background: #229955;
-  color: #ddffee;
+  background: #295;
+  color: #dfe;
   padding: .5rem 1rem;
   font-size: 11px;
   line-height: 1.2;
@@ -17,11 +17,11 @@
 }
 
 .show {
-  animation: slideDown .25s ease-in-out forwards;
+  animation: slide-down .25s ease-in-out forwards;
 }
 
 .exit {
-  animation: slideFade .25s ease-in-out forwards;
+  animation: slide-fade .25s ease-in-out forwards;
 }
 
 .close {
@@ -34,7 +34,7 @@
   font-weight: bold;
 }
 
-@keyframes slideDown {
+@keyframes slide-down {
   from {
     top: -10px;
     opacity: 0;
@@ -46,7 +46,7 @@
   }
 }
 
-@keyframes slideFade {
+@keyframes slide-fade {
   from {
     top: 10px;
     opacity: 1;
