--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -58,7 +58,7 @@
     padding: 0 .5rem;
     text-align: center;
     color: var(--color-text);
-    background: var(--color-bg-secondary);
+    background-color: var(--color-bg-secondary);
     text-decoration: none;
     transition: all .2s ease-out;
     cursor: pointer;
