--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,131 +1,130 @@
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 44px;
-    margin: 0 -20px;
-    padding: 0 20px;
-    border-bottom: 1px solid var(--color-bg-secondary);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 44px;
+  margin: 0 -20px;
+  padding: 0 20px;
+  border-bottom: 1px solid var(--color-bg-secondary);
 }
 
 .header h1 {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding: 0 1.5rem 0 0;
-    height: 44px;
-    border-right: 1px solid var(--color-bg-secondary);
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0 1.5rem 0 0;
+  height: 44px;
+  border-right: 1px solid var(--color-bg-secondary);
 }
 
 .section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 .75rem;
-    min-width: 150px;
-    height: 44px;
-    line-height: 1.4;
-    font-size: 10px;
-    border-right: 1px solid var(--color-bg-secondary);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0.75rem;
+  min-width: 150px;
+  height: 44px;
+  line-height: 1.4;
+  font-size: 10px;
+  border-right: 1px solid var(--color-bg-secondary);
 }
 
 .section .router {
-    min-width: 120px;
-    width: calc(100% - 1rem);
-    padding: 0 .5rem;
-    text-align: center;
-    color: var(--color-text);
-    background: var(--color-bg-secondary);
-    text-decoration: none;
-    transition: all .2s ease-out;
-    cursor: pointer;
-    opacity: .5;
+  min-width: 120px;
+  width: calc(100% - 1rem);
+  padding: 0 0.5rem;
+  text-align: center;
+  color: var(--color-text);
+  background: var(--color-bg-secondary);
+  text-decoration: none;
+  transition: all 0.2s ease-out;
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 .section .router:hover {
-    opacity: .8;
+  opacity: 0.8;
 }
 
 .section .versions {
-    display: flex;
-    width: 100%;
-    background-color: var(--color-text);
+  display: flex;
+  width: 100%;
+  background-color: var(--color-text);
 }
 
 .section .versions a {
-    width: calc(100% - 1rem);
-    padding: 0 .5rem;
-    text-align: center;
-    color: var(--color-text);
-    background-color: var(--color-bg-secondary);
-    text-decoration: none;
-    transition: all .2s ease-out;
-    cursor: pointer;
-    white-space: nowrap;
-
+  width: calc(100% - 1rem);
+  padding: 0 0.5rem;
+  text-align: center;
+  color: var(--color-text);
+  background-color: var(--color-bg-secondary);
+  text-decoration: none;
+  transition: all 0.2s ease-out;
+  cursor: pointer;
+  white-space: nowrap;
 }
 
-.section .versions a+a {
-    opacity: .70;
-    background-color: var(--color-bg-primary);
+.section .versions a + a {
+  opacity: 0.7;
+  background-color: var(--color-bg-primary);
 }
 
 .section .versions a:hover {
-    opacity: .8;
+  opacity: 0.8;
 }
 
 .box {
-    display: block;
-    height: 100%;
-    width: 350px;
-    border-right: 1px solid var(--color-bg-secondary);
+  display: block;
+  height: 100%;
+  width: 350px;
+  border-right: 1px solid var(--color-bg-secondary);
 }
 
 .box:last-child {
-    flex-grow: 1;
-    text-align: right;
+  flex-grow: 1;
+  text-align: right;
 }
 
 .theme {
-    position: relative;
-    display: flex;
-    justify-content: right;
-    align-items: center;
+  position: relative;
+  display: flex;
+  justify-content: right;
+  align-items: center;
 }
 
-.theme>span {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    font-size: 1.5rem;
-    border-left: 1px solid var(--color-bg-secondary);
-    color: var(--color-text);
-    cursor: pointer;
+.theme > span {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  font-size: 1.5rem;
+  border-left: 1px solid var(--color-bg-secondary);
+  color: var(--color-text);
+  cursor: pointer;
 }
 
-.theme>span::after {
-    position: absolute;
-    content: " ";
-    width: 1rem;
-    height: 1rem;
-    background-color: var(--color-bg-secondary);
-    border: 3px solid var(--color-bg-secondary);
-    border-radius: 50%;
-    transition: all .15s ease-in-out;
+.theme > span::after {
+  position: absolute;
+  content: ' ';
+  width: 1rem;
+  height: 1rem;
+  background-color: var(--color-bg-secondary);
+  border: 3px solid var(--color-bg-secondary);
+  border-radius: 50%;
+  transition: all 0.15s ease-in-out;
 }
 
-.theme>span:hover::after {
-    background-color: transparent;
+.theme > span:hover::after {
+  background-color: transparent;
 }
 
-.theme.light>span::after {
-    background-color: transparent;
+.theme.light > span::after {
+  background-color: transparent;
 }
 
-.theme.light>span:hover::after {
-    background-color: var(--color-bg-secondary);
+.theme.light > span:hover::after {
+  background-color: var(--color-bg-secondary);
 }
