--- a/src/app/components/Footer.module.css
+++ b/src/app/components/Footer.module.css
@@ -1,23 +1,23 @@
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 30px;
-    align-content: center;
-    text-align: center;
-    opacity: .5;
-    cursor: pointer;
-    user-select: none;
-    z-index: -1;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  align-content: center;
+  text-align: center;
+  opacity: 0.5;
+  cursor: pointer;
+  user-select: none;
+  z-index: -1;
 }
 
 .footer span {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-size: 1rem;
-    color: #f00;
-    animation: animateHeart 5s infinite;
-    animation-delay: 2s;
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-size: 1rem;
+  color: #f00;
+  animation: animateHeart 5s infinite;
+  animation-delay: 2s;
 }
