--- a/src/app/components/core/viewer/value/Value.module.css
+++ b/src/app/components/core/viewer/value/Value.module.css
@@ -1,25 +1,25 @@
 .str {
-    color: var(--color-pre-str);
-    cursor: pointer;
+  color: var(--color-pre-str);
+  cursor: pointer;
 }
 
 .num {
-    color: var(--color-pre-num);
-    cursor: pointer;
+  color: var(--color-pre-num);
+  cursor: pointer;
 }
 
 .bool {
-    color: var(--color-pre-bool);
-    cursor: pointer;
+  color: var(--color-pre-bool);
+  cursor: pointer;
 }
 
 .null {
-    color: var(--color-pre-null);
-    cursor: pointer;
+  color: var(--color-pre-null);
+  cursor: pointer;
 }
 
 .key {
-    color: var(--color-pre-num);
-    opacity: .8;
-    font-weight: bold;
+  color: var(--color-pre-num);
+  opacity: 0.8;
+  font-weight: bold;
 }
