--- a/src/app/components/core/viewer/value/Value.module.css
+++ b/src/app/components/core/viewer/value/Value.module.css
@@ -1,3 +1,7 @@
+.li {
+  cursor: pointer;
+}
+
 .str {
   color: var(--color-pre-str);
   cursor: pointer;
@@ -22,4 +26,12 @@
   color: var(--color-pre-num);
   opacity: 0.8;
   font-weight: bold;
+}
+
+mark {
+  background-color: rgba(255, 235, 59, 0.6);
+  color: inherit;
+  font-weight: 600;
+  padding: 0 2px;
+  border-radius: 2px;
 }
