--- a/src/app/components/core/message/Message.module.css
+++ b/src/app/components/core/message/Message.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   position: fixed;
-  bottom: 40px;
+  top: 40%;
   right: 0;
   left: 0;
   margin: 0 auto;
