feat: update UI general improvements

--- a/src/app/components/ControlBar.module.css
+++ b/src/app/components/ControlBar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  padding: 0.4rem;
+  padding: 0.4rem 0;
 }
 
 .actions ul {
@@ -21,21 +21,6 @@
   color: var(--color-primary);
 }
 
-.actions .highlight {
-  color: var(--color-warn);
-  border-color: var(--color-warn);
-}
-
-.actions .highlight::after {
-  background: var(--color-warn);
-}
-
-.actions span + span::before {
-  content: ' | ';
-  color: var(--color-text);
-  width: 0;
-}
-
 .actions span:first-child {
   margin-left: 0;
 }
@@ -50,63 +35,5 @@
 }
 
 .actions span:hover {
-  opacity: 0.9;
-}
-
-.actions span::after {
-  position: absolute;
-  left: 14px;
-  bottom: 0;
-  content: ' ';
-  display: inline-block;
-  width: 0;
-  height: 1px;
-  margin: 5px auto 0;
-  background: var(--color-primary);
-  transition: width 0.2s ease-in-out;
-  opacity: 0.7;
-}
-
-.actions span:first-child::after {
-  left: 0;
-}
-
-.actions span:hover::after {
-  width: calc(100% - 14px);
-}
-
-.actions span:first-child:hover::after {
-  width: 100%;
-}
-
-.selector ul {
-  opacity: 0;
-  visibility: hidden;
-  position: absolute;
-  right: -4px;
-  width: 200px;
-  margin-top: 5px;
-  padding: 0;
-  background-color: var(--color-bg-primary);
-  border: 1px solid var(--color-primary);
-  text-align: right;
-  transition: 0.15s ease-in-out 0.3s;
-}
-
-.selector:hover ul {
-  opacity: 1;
-  visibility: visible;
-  transition: 0.15s ease-in-out;
-}
-
-.selector ul li {
-  margin: 0;
-  padding: 0.25rem 0.75rem;
-  transition: all 0.2s ease-out;
-  color: var(--color-text);
-}
-
-.actions ul li:hover {
-  background-color: var(--color-bg-secondary);
-  color: var(--color-primary);
+  text-decoration: underline;
 }
