--- a/src/app/components/App.module.css
+++ b/src/app/components/App.module.css
@@ -6,11 +6,18 @@
   z-index: 10;
 }
 
-.sticky .table {
-  margin-top: 1rem;
-  padding-bottom: 1rem;
+.info {
+  padding: 0.5rem 0;
   border: none;
   border-bottom: 1px solid var(--color-bg-secondary);
+}
+
+.info strong {
+  font-weight: normal;
+}
+
+.info span {
+  opacity: 0.6;
 }
 
 .notice {
