--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -17,61 +17,12 @@
   border-right: 1px solid var(--color-bg-secondary);
 }
 
-.section {
+.labels {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin: 0 1.5rem;
+  flex-direction: row;
   align-items: center;
-  padding: 0 0.75rem;
-  min-width: 150px;
-  height: 44px;
-  line-height: 1.4;
-  font-size: 10px;
-  border-right: 1px solid var(--color-bg-secondary);
-}
-
-.section .router {
-  min-width: 120px;
-  width: calc(100% - 1rem);
-  padding: 0 0.5rem;
-  text-align: center;
-  color: var(--color-text);
-  background: var(--color-bg-secondary);
-  text-decoration: none;
-  transition: all 0.2s ease-out;
-  cursor: pointer;
-  opacity: 0.5;
-}
-
-.section .router:hover {
-  opacity: 0.8;
-}
-
-.section .versions {
-  display: flex;
-  width: 100%;
-  background-color: var(--color-text);
-}
-
-.section .versions a {
-  width: calc(100% - 1rem);
-  padding: 0 0.5rem;
-  text-align: center;
-  color: var(--color-text);
-  background-color: var(--color-bg-secondary);
-  text-decoration: none;
-  transition: all 0.2s ease-out;
-  cursor: pointer;
-  white-space: nowrap;
-}
-
-.section .versions a + a {
-  opacity: 0.7;
-  background-color: var(--color-bg-primary);
-}
-
-.section .versions a:hover {
-  opacity: 0.8;
+  gap: 1rem;
 }
 
 .box {
