--- a/src/app/components/core/badge/Badge.module.css
+++ b/src/app/components/core/badge/Badge.module.css
@@ -8,6 +8,7 @@
   color: var(--color-text);
   border: 1px solid var(--color-text);
   border-radius: 2px;
+  font-size: 11px;
 }
 
 .badge_default {
