--- a/src/app/components/core/viewer/key/Key.module.css
+++ b/src/app/components/core/viewer/key/Key.module.css
@@ -6,7 +6,7 @@
   position: relative;
   transition: opacity 0.1s ease-out;
   font-weight: bold;
-  padding-left: 11px;
+  padding-left: 14px;
 }
 
 .collapsible::before {
@@ -15,13 +15,19 @@
   align-items: center;
   text-align: center;
   position: absolute;
-  display: inline-block;
+  top: -1px;
+  display: flex;
   width: 15px;
   height: 15px;
   color: var(--color-text);
-  margin-left: -15px;
-  font-size: 9px;
+  margin-left: -5px;
   transition: transform 0.1s ease-out;
+}
+
+@-moz-document url-prefix() {
+  .collapsible::before {
+    top: 2px;
+  }
 }
 
 .ellipsis {
@@ -43,7 +49,6 @@
 .info {
   border-radius: 6px;
   padding: 0 5px;
-  font-size: 9px;
   font-style: italic;
   color: var(--color-pre-key);
   opacity: 0.6;
@@ -78,8 +83,8 @@
 }
 
 mark {
-  background-color: rgba(255, 235, 59, 0.6);
-  color: inherit;
+  background-color: var(--color-accent);
+  color: var(--color-bg-primary);
   font-weight: 600;
   padding: 0 2px;
   border-radius: 2px;
