--- a/src/app/components/core/viewer/tree/Tree.module.css
+++ b/src/app/components/core/viewer/tree/Tree.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   position: relative;
-  padding-left: 1.5rem;
+  padding-left: 24px;
 }
 
 .wrapper::before {
@@ -10,7 +10,7 @@
   position: absolute;
   height: calc(100% - 8px);
   top: 2px;
-  left: 2px;
+  left: 0;
 }
 
 .wrapper.root::before {
