feat: update UI composite components

--- a/src/app/components/App.module.css
+++ b/src/app/components/App.module.css
@@ -1,4 +1,4 @@
-.sticky {
+.header {
   position: sticky;
   top: 0;
   width: 100%;
@@ -6,22 +6,8 @@
   z-index: 10;
 }
 
-.info {
-  padding: 0.5rem 0;
-  border: none;
-  border-bottom: 1px solid var(--color-bg-secondary);
-}
-
-.info strong {
-  font-weight: normal;
-}
-
-.info span {
-  opacity: 0.6;
-}
-
 .notice {
-  margin: 0 0 0.75rem;
+  margin: 0.75rem 0;
   padding: 0.75rem;
   border: 1px solid var(--color-bg-secondary);
 }
