--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -8,13 +8,22 @@
   border-bottom: 1px solid var(--color-bg-secondary);
 }
 
-.header h1 {
+.header .h1 {
   display: flex;
   align-items: center;
   margin: 0;
   padding: 0 1.5rem 0 0;
   height: 44px;
   border-right: 1px solid var(--color-bg-secondary);
+  overflow: hidden;
+}
+
+.header .h1 h1 {
+  transition: padding-top 0.3s ease-out;
+}
+
+.header .h1 h1:hover {
+  padding-top: 40px;
 }
 
 .labels {
@@ -23,6 +32,7 @@
   flex-direction: row;
   align-items: center;
   gap: 1rem;
+  flex-grow: 1;
 }
 
 .box {
@@ -32,11 +42,6 @@
   border-right: 1px solid var(--color-bg-secondary);
 }
 
-.box:last-child {
-  flex-grow: 1;
-  text-align: right;
-}
-
 .theme {
   position: relative;
   display: flex;
@@ -44,38 +49,13 @@
   align-items: center;
 }
 
-.theme > span {
+.theme {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
-  font-size: 1.5rem;
   border-left: 1px solid var(--color-bg-secondary);
-  color: var(--color-text);
   cursor: pointer;
-}
-
-.theme > span::after {
-  position: absolute;
-  content: ' ';
-  width: 1rem;
-  height: 1rem;
-  background-color: var(--color-bg-secondary);
-  border: 3px solid var(--color-bg-secondary);
-  border-radius: 50%;
-  transition: all 0.15s ease-in-out;
-}
-
-.theme > span:hover::after {
-  background-color: transparent;
-}
-
-.theme.light > span::after {
-  background-color: transparent;
-}
-
-.theme.light > span:hover::after {
-  background-color: var(--color-bg-secondary);
 }
